// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Launch when a launch is failed renders it failed 1`] = `
<div
  className="launch"
>
  <WithStyles(Paper)
    className="status fail"
    elevation={1}
  >
    <pure(GroupWorkRoundedIcon)
      className="statusIcon"
    />
  </WithStyles(Paper)>
  <div
    className="connector"
  />
  <WithStyles(Card)
    className="launchInfo"
  >
    <WithStyles(CardHeader)
      subheader="2019-01-01"
      title="Test"
    />
    <WithStyles(CardContent)>
      <WithStyles(Typography)
        component="p"
        gutterBottom={true}
      >
        Details
      </WithStyles(Typography)>
      <WithStyles(Typography)
        color="textSecondary"
        component="p"
      >
        ID: 
        id1
      </WithStyles(Typography)>
    </WithStyles(CardContent)>
  </WithStyles(Card)>
</div>
`;

exports[`Launch when a launch is successful renders it successful 1`] = `
<div
  className="launch"
>
  <WithStyles(Paper)
    className="status success"
    elevation={1}
  >
    <pure(GroupWorkRoundedIcon)
      className="statusIcon"
    />
  </WithStyles(Paper)>
  <div
    className="connector"
  />
  <WithStyles(Card)
    className="launchInfo"
  >
    <WithStyles(CardHeader)
      subheader="2019-01-01"
      title="Test"
    />
    <WithStyles(CardContent)>
      <WithStyles(Typography)
        component="p"
        gutterBottom={true}
      >
        Details
      </WithStyles(Typography)>
      <WithStyles(Typography)
        color="textSecondary"
        component="p"
      >
        ID: 
        id1
      </WithStyles(Typography)>
    </WithStyles(CardContent)>
  </WithStyles(Card)>
</div>
`;

exports[`Launch when a launch is upcoming renders it upcoming 1`] = `
<div
  className="launch"
>
  <WithStyles(Paper)
    className="status upcoming"
    elevation={1}
  >
    <pure(GroupWorkRoundedIcon)
      className="statusIcon"
    />
  </WithStyles(Paper)>
  <div
    className="connector"
  />
  <WithStyles(Card)
    className="launchInfo"
  >
    <WithStyles(CardHeader)
      subheader="2019-01-01"
      title="Test"
    />
    <WithStyles(CardContent)>
      <WithStyles(Typography)
        component="p"
        gutterBottom={true}
      >
        Details
      </WithStyles(Typography)>
      <WithStyles(Typography)
        color="textSecondary"
        component="p"
      >
        ID: 
        id1
      </WithStyles(Typography)>
    </WithStyles(CardContent)>
  </WithStyles(Card)>
</div>
`;

exports[`Launch when launch does not have details does not render the details section 1`] = `
<div
  className="launch"
>
  <WithStyles(Paper)
    className="status success"
    elevation={1}
  >
    <pure(GroupWorkRoundedIcon)
      className="statusIcon"
    />
  </WithStyles(Paper)>
  <div
    className="connector"
  />
  <WithStyles(Card)
    className="launchInfo"
  >
    <WithStyles(CardHeader)
      subheader="2019-01-01"
      title="Test"
    />
    <WithStyles(CardContent)>
      <WithStyles(Typography)
        color="textSecondary"
        component="p"
      >
        ID: 
        id1
      </WithStyles(Typography)>
    </WithStyles(CardContent)>
  </WithStyles(Card)>
</div>
`;

exports[`Launch when launch does not have mission ids does not render the mission ids info 1`] = `
<div
  className="launch"
>
  <WithStyles(Paper)
    className="status success"
    elevation={1}
  >
    <pure(GroupWorkRoundedIcon)
      className="statusIcon"
    />
  </WithStyles(Paper)>
  <div
    className="connector"
  />
  <WithStyles(Card)
    className="launchInfo"
  >
    <WithStyles(CardHeader)
      subheader="2019-01-01"
      title="Test"
    />
    <WithStyles(CardContent)>
      <WithStyles(Typography)
        component="p"
      >
        Details
      </WithStyles(Typography)>
    </WithStyles(CardContent)>
  </WithStyles(Card)>
</div>
`;
